[package]
name = "rust-azure-iot-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
azure_iot_sdk = { version = "~0.8.0", features=["https-transport"] }
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
env_logger = "0.9.0"
error-stack = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4.17"
openssl = { version = "0.10.29", features = ["vendored"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"]}
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics"]}
prost = "0.9"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"

[build-dependencies]
anyhow = "1"
tonic-build = "0.6"