[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
env_logger = "0.9.0"
error-stack = "0.1.1"
log = "0.4.17"
prost = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"

[build-dependencies]
anyhow = "1"
tonic-build = "0.6"
