[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.5"
ctrlc = "3.2.2"
env_logger = "~0.9.0"
log = "~0.4.17"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"]}
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics"]}
rand = "~0.8.5"
tokio = { version = "1", features = ["full"] }